parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    TkLlaveAbre
    TkLlaveCierra

Grammar

Rule 0     S' -> INICIO
Rule 1     INICIO -> TkWith DEC TkBegin INSTR TkEnd
Rule 2     INICIO -> TkBegin INSTR TkEnd
Rule 3     DEC -> DEC TkVar DEC0
Rule 4     DEC -> TkVar IDENT TkDosPuntos TIPO
Rule 5     DEC0 -> IDENT TkDosPuntos TIPO
Rule 6     IDENT -> TkId
Rule 7     IDENT -> ASIG_ID
Rule 8     IDENT -> IDENT TkComa TkId
Rule 9     IDENT -> IDENT TkComa ASIG_ID
Rule 10    TIPO -> TkInt
Rule 11    TIPO -> TkChar
Rule 12    TIPO -> TkBool
Rule 13    TIPO -> TkArray TkCorcheteAbre ARIT TkCorcheteCierra TkOf TIPO
Rule 14    INSTR -> ASIG
Rule 15    INSTR -> I_O
Rule 16    INSTR -> COND
Rule 17    INSTR -> DETER
Rule 18    INSTR -> INDETER
Rule 19    INSTR -> INICIO
Rule 20    INSTR -> PUNTO
Rule 21    INSTR -> ASIG INSTR
Rule 22    INSTR -> I_O INSTR
Rule 23    INSTR -> INICIO INSTR
Rule 24    INSTR -> DETER INSTR
Rule 25    INSTR -> INDETER INSTR
Rule 26    INSTR -> COND INSTR
Rule 27    INSTR -> PUNTO INSTR
Rule 28    PUNTO -> TkId TkPunto ARIT
Rule 29    ASIG -> TkId TkAsignacion EXPR TkPuntoYComa
Rule 30    ASIG_ID -> TkId TkAsignacion EXPR
Rule 31    ARIT -> TkNum
Rule 32    ARIT -> TkParAbre ARIT TkParCierra
Rule 33    ARIT -> ARIT TkSuma ARIT
Rule 34    ARIT -> ARIT TkResta ARIT
Rule 35    ARIT -> ARIT TkMult ARIT
Rule 36    ARIT -> ARIT TkDiv ARIT
Rule 37    ARIT -> ARIT TkMod ARIT
Rule 38    ARIT -> TkValorAscii TkCaracter
Rule 39    ARIT -> TkId
Rule 40    ARIT -> TkResta ARIT
Rule 41    BOOL -> BOOL TkConjuncion BOOL
Rule 42    BOOL -> BOOL TkDisyuncion BOOL
Rule 43    BOOL -> ARIT TkMenor ARIT
Rule 44    BOOL -> ARIT TkMenorIgual ARIT
Rule 45    BOOL -> ARIT TkMayor ARIT
Rule 46    BOOL -> ARIT TkMayorIgual ARIT
Rule 47    BOOL -> ARIT TkIgual ARIT
Rule 48    BOOL -> ARIT TkDesigual ARIT
Rule 49    BOOL -> TkParAbre BOOL TkParCierra
Rule 50    BOOL -> TkFalse
Rule 51    BOOL -> TkTrue
Rule 52    BOOL -> TkNegacion BOOL
Rule 53    BOOL -> TkId
Rule 54    CHAR -> TkCaracter
Rule 55    CHAR -> CHAR TkSiguienteCar
Rule 56    CHAR -> CHAR TkAnteriorCar
Rule 57    CHAR -> TkId
Rule 58    COND -> TkIf BOOL TkHacer INSTR TkEnd
Rule 59    COND -> TkIf BOOL TkHacer INSTR TkOtherwise TkHacer INSTR TkEnd
Rule 60    INDETER -> TkWhile BOOL TkHacer INSTR TkEnd
Rule 61    DETER -> TkFor TkId TkFrom ARIT TkTo ARIT DETER0
Rule 62    DETER0 -> TkStep ARIT TkHacer INSTR TkEnd
Rule 63    DETER0 -> TkHacer INSTR TkEnd
Rule 64    I_O -> TkRead TkId TkPuntoYComa
Rule 65    I_O -> TkPrint EXPR TkPuntoYComa
Rule 66    EXPR -> CHAR
Rule 67    EXPR -> ARIT
Rule 68    EXPR -> ARRAY
Rule 69    EXPR -> BOOL
Rule 70    EXPR -> TkId
Rule 71    ARRAY -> ARRAY TkConcatenacion ARRAY
Rule 72    ARRAY -> TkShift ARRAY
Rule 73    ARRAY -> ARRAY TkCorcheteAbre ARIT TkCorcheteCierra
Rule 74    ARRAY -> TkId
Rule 75    ARRAY -> TkParAbre ARRAY TkParCierra

Terminals, with rules where they appear

TkAnteriorCar        : 56
TkArray              : 13
TkAsignacion         : 29 30
TkBegin              : 1 2
TkBool               : 12
TkCaracter           : 38 54
TkChar               : 11
TkComa               : 8 9
TkConcatenacion      : 71
TkConjuncion         : 41
TkCorcheteAbre       : 13 73
TkCorcheteCierra     : 13 73
TkDesigual           : 48
TkDisyuncion         : 42
TkDiv                : 36
TkDosPuntos          : 4 5
TkEnd                : 1 2 58 59 60 62 63
TkFalse              : 50
TkFor                : 61
TkFrom               : 61
TkHacer              : 58 59 59 60 62 63
TkId                 : 6 8 28 29 30 39 53 57 61 64 70 74
TkIf                 : 58 59
TkIgual              : 47
TkInt                : 10
TkLlaveAbre          : 
TkLlaveCierra        : 
TkMayor              : 45
TkMayorIgual         : 46
TkMenor              : 43
TkMenorIgual         : 44
TkMod                : 37
TkMult               : 35
TkNegacion           : 52
TkNum                : 31
TkOf                 : 13
TkOtherwise          : 59
TkParAbre            : 32 49 75
TkParCierra          : 32 49 75
TkPrint              : 65
TkPunto              : 28
TkPuntoYComa         : 29 64 65
TkRead               : 64
TkResta              : 34 40
TkShift              : 72
TkSiguienteCar       : 55
TkStep               : 62
TkSuma               : 33
TkTo                 : 61
TkTrue               : 51
TkValorAscii         : 38
TkVar                : 3 4
TkWhile              : 60
TkWith               : 1
error                : 

Nonterminals, with rules where they appear

ARIT                 : 13 28 32 33 33 34 34 35 35 36 36 37 37 40 43 43 44 44 45 45 46 46 47 47 48 48 61 61 62 67 73
ARRAY                : 68 71 71 72 73 75
ASIG                 : 14 21
ASIG_ID              : 7 9
BOOL                 : 41 41 42 42 49 52 58 59 60 69
CHAR                 : 55 56 66
COND                 : 16 26
DEC                  : 1 3
DEC0                 : 3
DETER                : 17 24
DETER0               : 61
EXPR                 : 29 30 65
IDENT                : 4 5 8 9
INDETER              : 18 25
INICIO               : 19 23 0
INSTR                : 1 2 21 22 23 24 25 26 27 58 59 59 60 62 63
I_O                  : 15 22
PUNTO                : 20 27
TIPO                 : 4 5 13

Parsing method: LALR

state 0

    (0) S' -> . INICIO
    (1) INICIO -> . TkWith DEC TkBegin INSTR TkEnd
    (2) INICIO -> . TkBegin INSTR TkEnd

    TkWith          shift and go to state 2
    TkBegin         shift and go to state 3

    INICIO                         shift and go to state 1

state 1

    (0) S' -> INICIO .



state 2

    (1) INICIO -> TkWith . DEC TkBegin INSTR TkEnd
    (3) DEC -> . DEC TkVar DEC0
    (4) DEC -> . TkVar IDENT TkDosPuntos TIPO

    TkVar           shift and go to state 5

    DEC                            shift and go to state 4

state 3

    (2) INICIO -> TkBegin . INSTR TkEnd
    (14) INSTR -> . ASIG
    (15) INSTR -> . I_O
    (16) INSTR -> . COND
    (17) INSTR -> . DETER
    (18) INSTR -> . INDETER
    (19) INSTR -> . INICIO
    (20) INSTR -> . PUNTO
    (21) INSTR -> . ASIG INSTR
    (22) INSTR -> . I_O INSTR
    (23) INSTR -> . INICIO INSTR
    (24) INSTR -> . DETER INSTR
    (25) INSTR -> . INDETER INSTR
    (26) INSTR -> . COND INSTR
    (27) INSTR -> . PUNTO INSTR
    (29) ASIG -> . TkId TkAsignacion EXPR TkPuntoYComa
    (64) I_O -> . TkRead TkId TkPuntoYComa
    (65) I_O -> . TkPrint EXPR TkPuntoYComa
    (58) COND -> . TkIf BOOL TkHacer INSTR TkEnd
    (59) COND -> . TkIf BOOL TkHacer INSTR TkOtherwise TkHacer INSTR TkEnd
    (61) DETER -> . TkFor TkId TkFrom ARIT TkTo ARIT DETER0
    (60) INDETER -> . TkWhile BOOL TkHacer INSTR TkEnd
    (1) INICIO -> . TkWith DEC TkBegin INSTR TkEnd
    (2) INICIO -> . TkBegin INSTR TkEnd
    (28) PUNTO -> . TkId TkPunto ARIT

    TkId            shift and go to state 12
    TkRead          shift and go to state 15
    TkPrint         shift and go to state 6
    TkIf            shift and go to state 10
    TkFor           shift and go to state 14
    TkWhile         shift and go to state 13
    TkWith          shift and go to state 2
    TkBegin         shift and go to state 3

    INICIO                         shift and go to state 11
    PUNTO                          shift and go to state 7
    COND                           shift and go to state 8
    ASIG                           shift and go to state 16
    INDETER                        shift and go to state 17
    DETER                          shift and go to state 18
    I_O                            shift and go to state 9
    INSTR                          shift and go to state 19

state 4

    (1) INICIO -> TkWith DEC . TkBegin INSTR TkEnd
    (3) DEC -> DEC . TkVar DEC0

    TkBegin         shift and go to state 21
    TkVar           shift and go to state 20


state 5

    (4) DEC -> TkVar . IDENT TkDosPuntos TIPO
    (6) IDENT -> . TkId
    (7) IDENT -> . ASIG_ID
    (8) IDENT -> . IDENT TkComa TkId
    (9) IDENT -> . IDENT TkComa ASIG_ID
    (30) ASIG_ID -> . TkId TkAsignacion EXPR

    TkId            shift and go to state 23

    ASIG_ID                        shift and go to state 22
    IDENT                          shift and go to state 24

state 6

    (65) I_O -> TkPrint . EXPR TkPuntoYComa
    (66) EXPR -> . CHAR
    (67) EXPR -> . ARIT
    (68) EXPR -> . ARRAY
    (69) EXPR -> . BOOL
    (70) EXPR -> . TkId
    (54) CHAR -> . TkCaracter
    (55) CHAR -> . CHAR TkSiguienteCar
    (56) CHAR -> . CHAR TkAnteriorCar
    (57) CHAR -> . TkId
    (31) ARIT -> . TkNum
    (32) ARIT -> . TkParAbre ARIT TkParCierra
    (33) ARIT -> . ARIT TkSuma ARIT
    (34) ARIT -> . ARIT TkResta ARIT
    (35) ARIT -> . ARIT TkMult ARIT
    (36) ARIT -> . ARIT TkDiv ARIT
    (37) ARIT -> . ARIT TkMod ARIT
    (38) ARIT -> . TkValorAscii TkCaracter
    (39) ARIT -> . TkId
    (40) ARIT -> . TkResta ARIT
    (71) ARRAY -> . ARRAY TkConcatenacion ARRAY
    (72) ARRAY -> . TkShift ARRAY
    (73) ARRAY -> . ARRAY TkCorcheteAbre ARIT TkCorcheteCierra
    (74) ARRAY -> . TkId
    (75) ARRAY -> . TkParAbre ARRAY TkParCierra
    (41) BOOL -> . BOOL TkConjuncion BOOL
    (42) BOOL -> . BOOL TkDisyuncion BOOL
    (43) BOOL -> . ARIT TkMenor ARIT
    (44) BOOL -> . ARIT TkMenorIgual ARIT
    (45) BOOL -> . ARIT TkMayor ARIT
    (46) BOOL -> . ARIT TkMayorIgual ARIT
    (47) BOOL -> . ARIT TkIgual ARIT
    (48) BOOL -> . ARIT TkDesigual ARIT
    (49) BOOL -> . TkParAbre BOOL TkParCierra
    (50) BOOL -> . TkFalse
    (51) BOOL -> . TkTrue
    (52) BOOL -> . TkNegacion BOOL
    (53) BOOL -> . TkId

    TkId            shift and go to state 29
    TkCaracter      shift and go to state 25
    TkNum           shift and go to state 39
    TkParAbre       shift and go to state 28
    TkValorAscii    shift and go to state 36
    TkResta         shift and go to state 35
    TkShift         shift and go to state 31
    TkFalse         shift and go to state 27
    TkTrue          shift and go to state 38
    TkNegacion      shift and go to state 32

    ARIT                           shift and go to state 33
    ARRAY                          shift and go to state 37
    CHAR                           shift and go to state 34
    BOOL                           shift and go to state 30
    EXPR                           shift and go to state 26

state 7

    (20) INSTR -> PUNTO .
    (27) INSTR -> PUNTO . INSTR
    (14) INSTR -> . ASIG
    (15) INSTR -> . I_O
    (16) INSTR -> . COND
    (17) INSTR -> . DETER
    (18) INSTR -> . INDETER
    (19) INSTR -> . INICIO
    (20) INSTR -> . PUNTO
    (21) INSTR -> . ASIG INSTR
    (22) INSTR -> . I_O INSTR
    (23) INSTR -> . INICIO INSTR
    (24) INSTR -> . DETER INSTR
    (25) INSTR -> . INDETER INSTR
    (26) INSTR -> . COND INSTR
    (27) INSTR -> . PUNTO INSTR
    (29) ASIG -> . TkId TkAsignacion EXPR TkPuntoYComa
    (64) I_O -> . TkRead TkId TkPuntoYComa
    (65) I_O -> . TkPrint EXPR TkPuntoYComa
    (58) COND -> . TkIf BOOL TkHacer INSTR TkEnd
    (59) COND -> . TkIf BOOL TkHacer INSTR TkOtherwise TkHacer INSTR TkEnd
    (61) DETER -> . TkFor TkId TkFrom ARIT TkTo ARIT DETER0
    (60) INDETER -> . TkWhile BOOL TkHacer INSTR TkEnd
    (1) INICIO -> . TkWith DEC TkBegin INSTR TkEnd
    (2) INICIO -> . TkBegin INSTR TkEnd
    (28) PUNTO -> . TkId TkPunto ARIT

    TkEnd           reduce using rule 20 (INSTR -> PUNTO .)
    TkOtherwise     reduce using rule 20 (INSTR -> PUNTO .)
    TkId            shift and go to state 12
    TkRead          shift and go to state 15
    TkPrint         shift and go to state 6
    TkIf            shift and go to state 10
    TkFor           shift and go to state 14
    TkWhile         shift and go to state 13
    TkWith          shift and go to state 2
    TkBegin         shift and go to state 3

    INICIO                         shift and go to state 11
    PUNTO                          shift and go to state 7
    COND                           shift and go to state 8
    ASIG                           shift and go to state 16
    INDETER                        shift and go to state 17
    DETER                          shift and go to state 18
    I_O                            shift and go to state 9
    INSTR                          shift and go to state 40

state 8

    (16) INSTR -> COND .
    (26) INSTR -> COND . INSTR
    (14) INSTR -> . ASIG
    (15) INSTR -> . I_O
    (16) INSTR -> . COND
    (17) INSTR -> . DETER
    (18) INSTR -> . INDETER
    (19) INSTR -> . INICIO
    (20) INSTR -> . PUNTO
    (21) INSTR -> . ASIG INSTR
    (22) INSTR -> . I_O INSTR
    (23) INSTR -> . INICIO INSTR
    (24) INSTR -> . DETER INSTR
    (25) INSTR -> . INDETER INSTR
    (26) INSTR -> . COND INSTR
    (27) INSTR -> . PUNTO INSTR
    (29) ASIG -> . TkId TkAsignacion EXPR TkPuntoYComa
    (64) I_O -> . TkRead TkId TkPuntoYComa
    (65) I_O -> . TkPrint EXPR TkPuntoYComa
    (58) COND -> . TkIf BOOL TkHacer INSTR TkEnd
    (59) COND -> . TkIf BOOL TkHacer INSTR TkOtherwise TkHacer INSTR TkEnd
    (61) DETER -> . TkFor TkId TkFrom ARIT TkTo ARIT DETER0
    (60) INDETER -> . TkWhile BOOL TkHacer INSTR TkEnd
    (1) INICIO -> . TkWith DEC TkBegin INSTR TkEnd
    (2) INICIO -> . TkBegin INSTR TkEnd
    (28) PUNTO -> . TkId TkPunto ARIT

    TkEnd           reduce using rule 16 (INSTR -> COND .)
    TkOtherwise     reduce using rule 16 (INSTR -> COND .)
    TkId            shift and go to state 12
    TkRead          shift and go to state 15
    TkPrint         shift and go to state 6
    TkIf            shift and go to state 10
    TkFor           shift and go to state 14
    TkWhile         shift and go to state 13
    TkWith          shift and go to state 2
    TkBegin         shift and go to state 3

    INICIO                         shift and go to state 11
    PUNTO                          shift and go to state 7
    COND                           shift and go to state 8
    ASIG                           shift and go to state 16
    INDETER                        shift and go to state 17
    DETER                          shift and go to state 18
    I_O                            shift and go to state 9
    INSTR                          shift and go to state 41

state 9

    (15) INSTR -> I_O .
    (22) INSTR -> I_O . INSTR
    (14) INSTR -> . ASIG
    (15) INSTR -> . I_O
    (16) INSTR -> . COND
    (17) INSTR -> . DETER
    (18) INSTR -> . INDETER
    (19) INSTR -> . INICIO
    (20) INSTR -> . PUNTO
    (21) INSTR -> . ASIG INSTR
    (22) INSTR -> . I_O INSTR
    (23) INSTR -> . INICIO INSTR
    (24) INSTR -> . DETER INSTR
    (25) INSTR -> . INDETER INSTR
    (26) INSTR -> . COND INSTR
    (27) INSTR -> . PUNTO INSTR
    (29) ASIG -> . TkId TkAsignacion EXPR TkPuntoYComa
    (64) I_O -> . TkRead TkId TkPuntoYComa
    (65) I_O -> . TkPrint EXPR TkPuntoYComa
    (58) COND -> . TkIf BOOL TkHacer INSTR TkEnd
    (59) COND -> . TkIf BOOL TkHacer INSTR TkOtherwise TkHacer INSTR TkEnd
    (61) DETER -> . TkFor TkId TkFrom ARIT TkTo ARIT DETER0
    (60) INDETER -> . TkWhile BOOL TkHacer INSTR TkEnd
    (1) INICIO -> . TkWith DEC TkBegin INSTR TkEnd
    (2) INICIO -> . TkBegin INSTR TkEnd
    (28) PUNTO -> . TkId TkPunto ARIT

    TkEnd           reduce using rule 15 (INSTR -> I_O .)
    TkOtherwise     reduce using rule 15 (INSTR -> I_O .)
    TkId            shift and go to state 12
    TkRead          shift and go to state 15
    TkPrint         shift and go to state 6
    TkIf            shift and go to state 10
    TkFor           shift and go to state 14
    TkWhile         shift and go to state 13
    TkWith          shift and go to state 2
    TkBegin         shift and go to state 3

    INICIO                         shift and go to state 11
    PUNTO                          shift and go to state 7
    COND                           shift and go to state 8
    ASIG                           shift and go to state 16
    INDETER                        shift and go to state 17
    DETER                          shift and go to state 18
    I_O                            shift and go to state 9
    INSTR                          shift and go to state 42

state 10

    (58) COND -> TkIf . BOOL TkHacer INSTR TkEnd
    (59) COND -> TkIf . BOOL TkHacer INSTR TkOtherwise TkHacer INSTR TkEnd
    (41) BOOL -> . BOOL TkConjuncion BOOL
    (42) BOOL -> . BOOL TkDisyuncion BOOL
    (43) BOOL -> . ARIT TkMenor ARIT
    (44) BOOL -> . ARIT TkMenorIgual ARIT
    (45) BOOL -> . ARIT TkMayor ARIT
    (46) BOOL -> . ARIT TkMayorIgual ARIT
    (47) BOOL -> . ARIT TkIgual ARIT
    (48) BOOL -> . ARIT TkDesigual ARIT
    (49) BOOL -> . TkParAbre BOOL TkParCierra
    (50) BOOL -> . TkFalse
    (51) BOOL -> . TkTrue
    (52) BOOL -> . TkNegacion BOOL
    (53) BOOL -> . TkId
    (31) ARIT -> . TkNum
    (32) ARIT -> . TkParAbre ARIT TkParCierra
    (33) ARIT -> . ARIT TkSuma ARIT
    (34) ARIT -> . ARIT TkResta ARIT
    (35) ARIT -> . ARIT TkMult ARIT
    (36) ARIT -> . ARIT TkDiv ARIT
    (37) ARIT -> . ARIT TkMod ARIT
    (38) ARIT -> . TkValorAscii TkCaracter
    (39) ARIT -> . TkId
    (40) ARIT -> . TkResta ARIT

    TkParAbre       shift and go to state 43
    TkFalse         shift and go to state 27
    TkTrue          shift and go to state 38
    TkNegacion      shift and go to state 32
    TkId            shift and go to state 44
    TkNum           shift and go to state 39
    TkValorAscii    shift and go to state 36
    TkResta         shift and go to state 35

    ARIT                           shift and go to state 46
    BOOL                           shift and go to state 45

state 11

    (19) INSTR -> INICIO .
    (23) INSTR -> INICIO . INSTR
    (14) INSTR -> . ASIG
    (15) INSTR -> . I_O
    (16) INSTR -> . COND
    (17) INSTR -> . DETER
    (18) INSTR -> . INDETER
    (19) INSTR -> . INICIO
    (20) INSTR -> . PUNTO
    (21) INSTR -> . ASIG INSTR
    (22) INSTR -> . I_O INSTR
    (23) INSTR -> . INICIO INSTR
    (24) INSTR -> . DETER INSTR
    (25) INSTR -> . INDETER INSTR
    (26) INSTR -> . COND INSTR
    (27) INSTR -> . PUNTO INSTR
    (29) ASIG -> . TkId TkAsignacion EXPR TkPuntoYComa
    (64) I_O -> . TkRead TkId TkPuntoYComa
    (65) I_O -> . TkPrint EXPR TkPuntoYComa
    (58) COND -> . TkIf BOOL TkHacer INSTR TkEnd
    (59) COND -> . TkIf BOOL TkHacer INSTR TkOtherwise TkHacer INSTR TkEnd
    (61) DETER -> . TkFor TkId TkFrom ARIT TkTo ARIT DETER0
    (60) INDETER -> . TkWhile BOOL TkHacer INSTR TkEnd
    (1) INICIO -> . TkWith DEC TkBegin INSTR TkEnd
    (2) INICIO -> . TkBegin INSTR TkEnd
    (28) PUNTO -> . TkId TkPunto ARIT

    TkEnd           reduce using rule 19 (INSTR -> INICIO .)
    TkOtherwise     reduce using rule 19 (INSTR -> INICIO .)
    TkId            shift and go to state 12
    TkRead          shift and go to state 15
    TkPrint         shift and go to state 6
    TkIf            shift and go to state 10
    TkFor           shift and go to state 14
    TkWhile         shift and go to state 13
    TkWith          shift and go to state 2
    TkBegin         shift and go to state 3

    INICIO                         shift and go to state 11
    PUNTO                          shift and go to state 7
    COND                           shift and go to state 8
    ASIG                           shift and go to state 16
    INDETER                        shift and go to state 17
    DETER                          shift and go to state 18
    I_O                            shift and go to state 9
    INSTR                          shift and go to state 47

state 12

    (29) ASIG -> TkId . TkAsignacion EXPR TkPuntoYComa
    (28) PUNTO -> TkId . TkPunto ARIT

    TkAsignacion    shift and go to state 48
    TkPunto         shift and go to state 49


state 13
